--- a/utils-commom/pom.xml
+++ b/utils-commom/pom.xml
@@ -3,21 +3,33 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>com.strom</groupId>
-    <artifactId>api-analysis</artifactId>
+    <artifactId>utils-commom</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+
+    <properties>
+        <!-- versions -->
+        <cglib.version>3.3.0</cglib.version>
+    </properties>
 
     <dependencies>
         <dependency>
-            <groupId>com.strom</groupId>
-            <artifactId>utils-commom</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.11</version>
+        </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>${cglib.version}</version>
         </dependency>
     </dependencies>
 
@@ -33,5 +45,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
